<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_schedules" />

        <item
            android:id="@+id/nav_usage_guide"
            android:icon="@drawable/ic_guide"
            android:title="@string/menu_usage_guide" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_check_updates"
            android:icon="@drawable/ic_update"
            android:title="@string/action_check_updates" />
    </group>

</menu>

